--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
@@ -249,12 +249,11 @@
 
         <div class="pull-right">
             <div class="btn-toolbar">
-                <button type="button" class="btn btn-lg btn-findme" ng-click="vm.saveAddressCsvs()" ng-show="vm.csvItems && vm.csvItems.length > 0"> <!--ng-disabled="vm.addressesHaveErrors()">-->
-                    Save Addresses
+                <button type="button" class="btn btn-lg btn-findme"
+                        ng-click="vm.saveAddressCsvs()" ng-show="vm.csvItems && vm.csvItems.length > 0" ng-disabled="vm.addressesHaveErrors()">
+                    <span class="fa fa-save"></span>&nbsp;Save Addresses
                 </button>
-                <button type="button" class="btn btn-lg btn-findme hollow" ng-click="vm.download(vm.log.row)">
-                    Download Log
-                </button>
+
             </div>
         </div>
     </form>
@@ -347,36 +346,62 @@
     </div>
 
 
-    <div class="panel panel-danger" ng-show="vm.postSaveLogs && vm.postSaveLogs.length > 0">
+    <div class="panel panel-danger" ng-show="vm.addressesHaveErrors(true) || vm.errormsg">
         <div class="panel-heading">
-            <span><b>{{vm.postSaveLogs.length}} Post Save Error(s)</b></span>
-            <button data-toggle="collapse" class="btn btn-sm btn-danger pull-right" ng-click="vm.showPostSaveErrors = !vm.showPostSaveErrors">{{vm.showPostSaveErrors ? 'Hide' : 'View Error(s)'}}</button>
+            <span><b>{{vm.getErrorCount()}} Row(s) with Error(s)</b></span>
+
+            <div class="btn-toolbar pull-right">
+                <button type="button" class="btn btn-sm btn-findme hollow" ng-click="vm.download()">
+                    <span ng-class="vm.downloadingPreSaveLog ? 'fa fa-circle-o-notch fa-spin' : 'fa fa-download'"></span>&nbsp;<b>Download Pre-Save Error Log</b>
+                </button>
+
+                <button class="btn btn-danger btn-sm no-animate" ng-show="vm.addressesHaveErrors(true) && vm.addressesHaveSuccess()" ng-click="vm.showRows('errors')">
+                    {{vm.appProps.lbl_VwError}}
+                </button>
+                <button class="btn btn-success btn-sm no-animate" ng-show="vm.addressesHaveErrors(true) && vm.addressesHaveSuccess()" ng-click="vm.showRows('success')">
+                    {{vm.appProps.lbl_VwSuccess}}
+                </button>
+                <button class="btn btn-default btn-sm no-animate" ng-show="vm.addressesHaveErrors(true) && vm.addressesHaveSuccess()" ng-click="vm.showRows()">
+                    {{vm.appProps.lbl_VwAll}}
+                </button>
+            </div>
+
+        </div>
+
+        <div ng-show="vm.errormsg" class="panel-heading no-animate">
+            <span><b>{{vm.appProps.lbl_ErrorsMsg}} {{vm.errormsg}}</b></span>
         </div>
     </div>
 
-    <div uib-collapse="!vm.postSaveLogs || vm.postSaveLogs.length == 0 || !vm.showPostSaveErrors">
+
+    <div class="panel panel-danger" ng-show="vm.postSaveLogs && vm.postSaveLogs.length > 0">
+        <div class="panel-heading">
+            <span><b>{{vm.postSaveLogs.length}} Post Save Error(s)</b></span>
+
+            <div class="btn-toolbar pull-right">
+                <button type="button" class="btn btn-sm btn-findme hollow"
+                        ng-click="vm.downloadPostSaveLog()"
+                        ng-disabled="!vm.postSaveLogs || vm.postSaveLogs.length <= 0">
+                    <span ng-class="vm.downloadingPostSaveLog ? 'fa fa-circle-o-notch fa-spin' : 'fa fa-download'"></span>&nbsp;<b>Download Post-Save Error Log</b>
+                </button>
+
+                <button data-toggle="collapse" class="btn btn-sm btn-danger pull-right" ng-click="vm.showPostSaveErrors = !vm.showPostSaveErrors">
+                    {{vm.showPostSaveErrors ? 'Hide' : 'View Error(s)'}}
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div uib-collapse="!vm.postSaveLogs || vm.postSaveLogs.length == 0 || !vm.showPostSaveErrors" style="padding-left: 30px;">
         <p class="catErrors" ng-repeat="log in vm.postSaveLogs">
             {{log.value}}
         </p>
         <br />
     </div>
 
-    <br />
 
-    <div id="csv" class="no-animate" ng-show="vm.addressesHaveErrors(true) || vm.errormsg">
-        <div class="panel panel-danger">
-            <div class="panel-heading no-animate">
-                <span><b>{{vm.getErrorCount()}} Row(s) with Error(s)</b></span>
-                <button class="btn btn-danger btn-sm pull-right no-animate" ng-show="vm.addressesHaveErrors(true)" ng-click="vm.showRows('errors')">{{vm.appProps.lbl_VwError}}</button>
-                <button class="btn btn-success btn-sm pull-right no-animate" ng-show="vm.addressesHaveSuccess()" ng-click="vm.showRows('success')">{{vm.appProps.lbl_VwSuccess}}</button>
-                <button class="btn btn-default btn-sm pull-right no-animate" ng-click="vm.showRows()">{{vm.appProps.lbl_VwAll}}</button>
+    <div id="csv" ng-show="vm.csvItems && vm.csvItems.length > 0">
 
-            </div>
-
-            <div ng-show="vm.errormsg" class="panel-heading no-animate">
-                <span><b>{{vm.appProps.lbl_ErrorsMsg}} {{vm.errormsg}}</b></span>
-            </div>
-        </div>
         <div class="table-responsive">
             <table id="csv-table" class="table table-fixed-header table-striped">
                 <thead class='header'>
@@ -443,8 +468,8 @@
             </table>
         </div>
 
-        </div>-->
-
-
-        <div class="modal-container"></div>
     </div>
+
+
+    <div class="modal-container"></div>
+</div>
