--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
@@ -351,7 +351,7 @@
             <span><b>{{vm.getErrorCount()}} Row(s) with Error(s)</b></span>
 
             <div class="btn-toolbar pull-right">
-                <button type="button" class="btn btn-sm btn-findme hollow" ng-click="vm.download()">
+                <button type="button" class="btn btn-sm btn-findme hollow" ng-click="vm.downloadPreSaveLog()">
                     <span ng-class="vm.downloadingPreSaveLog ? 'fa fa-circle-o-notch fa-spin' : 'fa fa-download'"></span>&nbsp;<b>Download Pre-Save Error Log</b>
                 </button>
 
