--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -34,6 +34,7 @@
         <link rel="stylesheet" href="~/css/app/admin/categories.min.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/admin/addresses.min.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/account/profile.min.css" swp-cache-version="true" />
+        <link rel="stylesheet" href="~/css/app/admin/csv.min.css" swp-cache-version="true" />
     </environment>
 }
 
