--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -201,6 +201,10 @@
             lbl_Mins: ('@Html.GetLabel("lbl_Mins")').encodeHtml(),
             lbl_TripAd: ('@Html.GetLabel("lbl_TripAd")').encodeHtml(),
             lbl_CodeSnipet: ('@Html.GetLabel("lbl_CodeSnipet")').encodeHtml(),
+            lbl_Catg: ('@Html.GetLabel("lbl_Catg")').encodeHtml(),
+            lbl_SubCatg: ('@Html.GetLabel("lbl_SubCatg")').encodeHtml(),
+            lbl_Contacts: ('@Html.GetLabel("lbl_Contacts")').encodeHtml(),
+            lbl_InputHr: ('@Html.GetLabel("lbl_InputHr")').encodeHtml(),
 
             lbl_Import: ('@Html.GetLabel("lbl_Import")').encodeHtml(),
             lbl_BrowseCsvAddrFile: ('@Html.GetLabel("lbl_BrowseCsvAddrFile")').encodeHtml(),
@@ -222,6 +226,7 @@
             lbl_Saturday: ('@Html.GetLabel("lbl_Saturday")').encodeHtml(),
             lbl_Sunday: ('@Html.GetLabel("lbl_Sunday")').encodeHtml(),
             lbl_pHoliday: ('@Html.GetLabel("lbl_pHoliday")').encodeHtml(),
+            lbl_Value: ('@Html.GetLabel("lbl_Value")').encodeHtml(),
 
             erMsg_InvldEmail: ('@Html.GetMessage("erMsg_InvldEmail")').encodeHtml(),
 
