--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/Cities.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/Cities.html
@@ -388,7 +388,7 @@
                                         </button>
 
                                         <button ng-show="district.id > 0 && !district.saving" type="button" class="btn btn-findme action inline-element no-animate" style="margin-left: 20px;"
-                                                title="{{vm.appProps.msg_SHwRgnsCtys}}" ng-click="vm.dVm.filterOnParent(district)">
+                                                title="{{vm.appProps.msg_SHwDstrctsCtys}}" ng-click="vm.dVm.filterOnParent(district)">
                                             <span class="fa fa-arrow-right"></span>
                                         </button>
                                     </div>
@@ -513,7 +513,7 @@
                                         </button>
 
                                         <button ng-show="cityGroup.id > 0 && !cityGroup.saving" type="button" class="btn btn-findme action inline-element no-animate" style="margin-left: 20px;"
-                                                title="{{vm.appProps.msg_SHwRgnsCtys}}" ng-click="vm.gVm.filterOnParent(cityGroup)">
+                                                title="{{vm.appProps.msg_SHwGrpsCtys}}" ng-click="vm.gVm.filterOnParent(cityGroup)">
                                             <span class="fa fa-arrow-right"></span>
                                         </button>
                                     </div>
